# component-webdav-writer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
scripts/: build_n_test.sh
src/: component.py  configuration.py  webdav_client.py
tests/: test_configuration.py  test_webdav_client.py
