[project]
name = "keboola-wr-writer"
version = "1.0.0"
requires-python = ">=3.13"

dependencies = [
  "keboola.component==1.11.0",
  "keboola.utils==1.1.0",
  "keboola.http-client==1.0.1",
  "freezegun==1.5.5",
  "mock==5.2.0",
  "pydantic==2.11.4",
  "dateparser==1.2.1",
  "pytz==2025.2",
  "webdavclient3==3.14.6"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "tests",
    "example",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "I001",
]
